[package]
name = "l4srs"
version = "0.11.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
ldap3_proto = "0.2"
futures = "0.3"
tokio-util = { version =  "0.7", features = ["codec"] }
clap = "3"
get_if_addrs = "0.5.3"
glob = "*"
hyper = { version = "0.14.17", features = ["full"] }
hyper-staticfile = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
#thiserror = "1"
chrono = "0.4"
uuid = {version = "1", features=["v4"] }

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.

