[package]
name = "l4srs"
version = "0.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
ldap3_proto = "0.2.3"
hyper-staticfile = "0.9.4"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.24.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3.25"
get_if_addrs = "0.5.3"
glob = "0.3.1"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.68"
chrono = "0.4.23"
uuid = { version = "1.2.2", features = ["v4"] }

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true
